--- a/mixed/pulpfreq.qmd
+++ b/mixed/pulpfreq.qmd
@@ -436,12 +436,15 @@ lay the basis for more complex models.
 # GLMMTMB
 
 The `glmmTMB` package uses the Template Model Builder package (TMB) to fit
-a wide variety of generalized mixed effect models. 
+a wide variety of generalized mixed effect models. (Interestingly,
+`mmrm` also uses TMB but does not use the same fitting approach). We
+expect `glmmTMB` to behave like `lme4` for simpler models but there
+may be some differences in the implementation.
 
 Installation is not as straightforward as usual because the versions
 of `glmmTMB` and `TMB` (which also depends on `Matrix`) need to match. This
 may involve installing older versions of `TMB` and `Matrix` than current.
-*I admit to not bothering with this and accepting the warning message. We
+*I admit to be lazy and not bothering with this and accepting the warning message. We
 are not doing anything cutting edge here so I am not expecting a problem*.
 
 ```{r}
