--- a/mixed/irrifreq.qmd
+++ b/mixed/irrifreq.qmd
@@ -69,7 +69,10 @@ and variety, which is necessarily also a random effect because one of
 the two components is random. The fullest model that we might consider
 is: 
 
-$$y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k + (vf)_{jk} + \epsilon_{ijk}$$
+$$
+y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k + (vf)_{jk} + \epsilon_{ijk}
+$$
+
 
 where $\mu, i_i, v_j, (iv)_{ij}$ are fixed effects; the rest are random
 having variances $\sigma^2_f$, $\sigma^2_{vf}$ and $\sigma^2_\epsilon$.
@@ -83,7 +86,9 @@ separate the two variabilities. (This means that we are not
 demonstrating split plot modeling in the wider sense).
 We resort to a simpler model that omits the variety by field interaction random effect: 
 
-$$y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k +  \epsilon_{ijk}$$
+$$
+y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k +  \epsilon_{ijk}
+$$
 
 # LME4
 
