--- a/mixed/irrifreq.qmd
+++ b/mixed/irrifreq.qmd
@@ -70,9 +70,7 @@ the two components is random. The fullest model that we might consider
 is: 
 
 
-$$
-y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k + (vf)_{jk} + \epsilon_{ijk}
-$$
+$$y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k + (vf)_{jk} + \epsilon_{ijk}$$
 
 
 where $\mu, i_i, v_j, (iv)_{ij}$ are fixed effects; the rest are random
@@ -88,9 +86,7 @@ demonstrating split plot modeling in the wider sense).
 We resort to a simpler model that omits the variety by field interaction random effect: 
 
 
-$$
-y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k +  \epsilon_{ijk}
-$$
+$$y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k +  \epsilon_{ijk}$$
 
 # LME4
 
