--- a/mixed/irrifreq.qmd
+++ b/mixed/irrifreq.qmd
@@ -86,8 +86,9 @@ separate the two variabilities. (This means that we are not
 demonstrating split plot modeling in the wider sense).
 We resort to a simpler model that omits the variety by field interaction random effect: 
 
-
-$$y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k +  \epsilon_{ijk}$$
+```{math}
+y_{ijk} = \mu + i_i + v_j + (iv)_{ij} + f_k +  \epsilon_{ijk}
+```
 
 # LME4
 
