--- a/mixed/longitudinal.qmd
+++ b/mixed/longitudinal.qmd
@@ -1,13 +1,15 @@
 ---
-title: Longitudinal
+title: Longitudinal Data Analysis example
 author: "[Julian Faraway](https://julianfaraway.github.io/)"
 date: "`r format(Sys.time(), '%d %B %Y')`"
-output: 
-  github_document:
+format: 
+  gfm:
     toc: true
 ---
 
-```{r global_options, include=FALSE}
+```{r}
+#| label: global_options
+#| include: false
 knitr::opts_chunk$set(comment=NA, 
                       echo = TRUE,
                       fig.path="figs/",
@@ -18,7 +20,9 @@ knitr::opts_chunk$set(comment=NA,
 knitr::opts_knit$set(global.par = TRUE)
 ```
 
-```{r graphopts, include=FALSE}
+```{r}
+#| label: graphopts
+#| include: false
 par(mgp=c(1.5,0.5,0), mar=c(3.1,3.1,0.1,0), pch=20)
 ggplot2::theme_set(ggplot2::theme_bw())
 ```
@@ -93,19 +97,24 @@ faraway::sumary(mmod, digits=3)
 ```
 
 This model can be written as: 
-$$
+
+```{math}
 \begin{aligned}
 \mathrm{\log(income)}_{ij} &= \mu + \beta_{y} \mathrm{year}_i + \beta_s \mathrm{sex}_j + \beta_{ys} \mathrm{sex}_j \times \mathrm{year}_i + \beta_e \mathrm{educ}_j + \beta_a \mathrm{age}_j \\ &+ \gamma^0_j + \gamma^1_j \mathrm{year}_i + \epsilon_{ij}
 \end{aligned}
-$$
+```
+
 where $i$ indexes the year and $j$ indexes the individual. We have: 
-$$\left(
+
+```{math}
+\left(
   \begin{array}{c}
     \gamma^0_k \\
     \gamma^1_k
   \end{array}
   \right) \sim
-  N(0,\sigma^2 D)$$
+  N(0,\sigma^2 D)
+```
 
 We have chosen not to have an interaction between the intercept and the slope random effects
 and so $D$ is a diagonal matrix. It is possible to have such an interaction in
